fixed bootstrap column sizing on mobile, tweaked gltf loader to support multi mesh models to refresh on season change

--- a/final/css/main.css
+++ b/final/css/main.css
@@ -26,6 +26,22 @@
 }
 
 
+#objectTitleBox {
+/* position:fixed; */
+   z-index: 99;
+   left:0px;
+   bottom:0px;
+   height:30px;
+   width:100%;
+   color: red;
+}
+
+/* IE 6 */
+* html #footer {
+   position:absolute;
+   top:expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px');
+}
+
 
 .modal-full {
     min-width: 100%;
